@@ -1,3 +1,8 @@
+2004-02-15  Saito <saito2@digitalme.com>
+
+	* timidity/portaudio_a.c:
+	  Fix for Win32.
+
 2004-02-14  Saito <saito2@digitalme.com>
 
 	* timidity/playmidi.[ch], timidity/mix.c,
